English update project

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div id="app">
     <header class="container">
       <nav>
-        <img class="logo" src="./assets/camera.jpg" alt="Imagem da logomarca">
+        <img class="logo" src="./assets/camera.jpg" alt="Logo image">
         <ul>
           <li>Home</li>
           <li class="active">Galeria</li>
@@ -25,14 +25,14 @@
       <form>
         <div class="input-wrapper">
           <label for="search">Pesquise por imagens e coleções</label>
-          <input type="text" id="search" placeholder="Pesquise por imagens e coleções">
+          <input type="text" id="search" placeholder="Search for images in the collections">
         </div>
       </form>
 
       <img 
         class="avatar" 
         src="https://pics.craiyon.com/2023-05-31/220e4c73f6674d46a84840ebde9f9bc8.webp" 
-        alt="Foto de perfil"
+        alt="Profile picture"
       />
     </header>
     <main>
@@ -41,7 +41,7 @@
 
         <section class="gallery">
           <figure class="item">
-            <img src="./assets/img1.jpg" alt="Notebook e um Heatseat">
+            <img src="./assets/img1.jpg" alt="Notebook and a Headset">
 
             <figcaption class="details">
               <h2>Workspace elétrica</h2>
@@ -52,7 +52,7 @@
           </figure>
 
         <figure class="item" style="--delay: .6s;">
-          <img src="./assets/img2.jpg" alt="Teclado e mouse">
+          <img src="./assets/img2.jpg" alt="Keyboard and mouse">
 
           <figcaption class="details">
             <h2>Dark and red</h2>
@@ -63,7 +63,7 @@
         </figure>
 
         <figure class="item" style="--delay: .8s;">
-          <img src="./assets/img3.jpg" alt="Monitor e um Heatseat">
+          <img src="./assets/img3.jpg" alt="Monitor and a Headset">
 
           <figcaption class="details">
             <h2>Organização e grids</h2>
@@ -74,7 +74,7 @@
         </figure>
 
         <figure class="item" style="--delay: 1s;">
-          <img src="./assets/img4.jpg" alt="Dois Monitores">
+          <img src="./assets/img4.jpg" alt="Two Monitors">
 
           <figcaption class="details">
             <h2>Colméia</h2>
@@ -85,7 +85,7 @@
         </figure>
 
         <figure class="item" style="--delay: 1.2s;">
-          <img src="./assets/img5.jpg" alt="Notebook e vários papeis">
+          <img src="./assets/img5.jpg" alt="Notebook and various papers">
 
           <figcaption class="details">
             <h2>Setup de escritor</h2>
@@ -96,7 +96,7 @@
         </figure>
 
         <figure class="item" style="--delay: 1.4s;">
-          <img src="./assets/img6.jpg" alt="Cadeira ergonomica e um monitor">
+          <img src="./assets/img6.jpg" alt="Ergonomic char and a monitor">
 
           <figcaption class="details">
             <h2>Ergonomia e cores</h2>
@@ -107,7 +107,7 @@
         </figure>
 
         <figure class="item" style="--delay: 1.6s;">
-          <img src="./assets/img7.jpg" alt="Monitor na mesa">
+          <img src="./assets/img7.jpg" alt="Monitor on the table">
 
           <figcaption class="details">
             <h2>Show de luzes</h2>
@@ -118,7 +118,7 @@
         </figure>
 
         <figure class="item" style="--delay: 1.8s;">
-          <img src="./assets/img8.jpg" alt="Monitor iluminado">
+          <img src="./assets/img8.jpg" alt="Illuminated monitor">
 
           <figcaption class="details">
             <h2>Deep purple</h2>
@@ -129,7 +129,7 @@
         </figure>
 
         <figure class="item" style="--delay: 2s;">
-          <img src="./assets/img9.jpg" alt="Telas ligadas">
+          <img src="./assets/img9.jpg" alt="Screen on">
 
           <figcaption class="details">
             <h2>Multi-Screen</h2>
